Added Payment and Logout

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to JesmundPage</h1>
     <h2>This is the Main Product Page</h2>
+    <h2>This is the Payment Page</h2>
+    <h3>This is logout Page</h3>
 </body>
 </html>
